--- a/Project 3 - weather journal/index.html
+++ b/Project 3 - weather journal/index.html
@@ -12,7 +12,7 @@
       <h1 class="main-heading">Weather Journal</h1>
       <!-- form section for user to input their zip code and their feelings on that day. Only works on US zip codes -->
       <div class="form-container">
-        <form class="form" action="/add" method="post">
+        <form class="form" id="form" action="/add" method="post">
           <label for="zip" class="input-label"> Enter Zip Code:</label>
           <input
             type="text"
